ScopeEvent integrated, no new tests yet, all current tests passing